<resources>

    <string name="tab_empty"></string>

    <string name="tab_code">Code</string>
    <string name="tab_people">People</string>
    <string name="tab_settings">Settings</string>
    <string name="tab_repositories">Repositories</string>
    <string name="tab_mirrors">Mirrors</string>
    <string name="tab_users">Users</string>
    <string name="tab_organizations">Organizations</string>
    <string name="tab_explore">Explore</string>
    <string name="tab_communication">Communication</string>
    <string name="tab_profile">Profile</string>
    <string name="tab_files">Files</string>
    <string name="tab_issues">Issues</string>
    <string name="tab_pull_requests">Pull Requests</string>
    <string name="tab_wiki">Wiki</string>

    <string name="app_name">NotABug Mobile</string>
    <string name="label_website_name">NotABug.org</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="label_register_dialog">Registration</string>
    <string name="label_credentials_handling_dialog">Credentials Handling</string>
    <string name="label_skip_login_dialog">Anonymous Browsing</string>
    <string name="label_search">Search</string>
    <string name="label_loading_entries">New entries are on the way!</string>
    <string name="label_logging_in">Logging in</string>
    <string name="label_failed_to_login">Failed to login</string>
    <string name="label_failed_to_load_page">Failed to load requested page!</string>
    <string name="label_nothing_found">Nothing found, try searching again!</string>
    <string name="label_no_url">No URL was provided to load, exiting activity</string>

    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="action_skip_login">Browse without logging in</string>
    <string name="action_proceed">Proceed</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_continue">Continue</string>
    <string name="action_open_browser">Open browser</string>
    <string name="action_okay">Okay</string>
    <string name="action_try_again">Try again</string>
    <string name="action_go_back">Go back</string>

    <string name="description_register_dialog">
        NotABug.org requires you to solve a CAPTCHA in order to register.
        To prevent spam accounts this app does not handle the registration process.
        You should register using your browser instead.
    </string>
    <string name="description_credentials_handling_dialog">
        This app will store your credentials unencrypted in the device storage.
        Storing credentials is needed to log you in automatically between sessions.
    </string>
    <string name="description_skip_login_dialog">
        You can browse NotABug.org without logging in.
        However, you will only be able to view public repositories, mirrors, organizations and people\'s profiles.
        Users browsing anonymously have no ability to commit changes or create content.
    </string>
    <string name="description_empty_fields">
        Some fields are empty
    </string>
    <string name="description_loading_entries">
        We are loading new entries.
        If it takes too long, ensure you are connected to the internet and your credentials were not updated outside of the app.
        If you sure that none of those statements is the case, you can restart the app to obtain new session identifier.
    </string>
    <string name="description_logging_in">
        We are logging you in. This may take some time depending on your internet connection.
    </string>
    <string name="description_error_logging_in">
        We failed to authorize with given credentials.
        Verify that your username and password are correct and try logging in again.
        This message may occur if you changed your password or misspelled your credentials.
    </string>

    <string name="external_resources_icons8">https://icons8.com/</string>

    <string name="placeholder_repository_name">RepositoryNamePlaceholder</string>
    <string name="placeholder_repository_description">Repository description with some extra words. It may take several lines.</string>
    <string name="placeholder_last_modified">Updated 16 minutes ago</string>
    <string name="placeholder_username">john_doe</string>
    <string name="placeholder_full_name">John Doe</string>
    <string name="placeholder_email">johndoe@mailservice.com</string>
    <string name="placeholder_website">https://example.com</string>
    <string name="placeholder_location">USA</string>
    <string name="placeholder_join_date">Joined February 1st, 2000</string>

</resources>