<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:gravity="center"
    android:background="?colorSurface"
    tools:context=".LoginActivity"
    android:id="@+id/view_root">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:src="@drawable/favicon"
            android:adjustViewBounds="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_website_name"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="?android:colorPrimary" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_username"
            app:startIconDrawable="@drawable/ic_baseline_account_circle_24"
            android:layout_marginVertical="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_password"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.NotABugMobile.Button.UnelevatedButtonExtraSmall"
            android:layout_marginTop="5dp"
            android:text="@string/action_login" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.NotABugMobile.Button.OutlinedButtonExtraSmall"
            android:text="@string/action_register" />

        <Button
            android:id="@+id/button_skip_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.NotABugMobile.Button.OutlinedButtonExtraSmall"
            android:text="@string/action_skip_login" />

    </LinearLayout>

</LinearLayout>