<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/view_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_corners_large"
    android:backgroundTint="?colorSecondaryContainer"
    tools:ignore="PrivateResource">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackgroundBorderless">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profile_picture"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:adjustViewBounds="true"
            android:src="#FFF"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:shapeAppearance="@style/ShapeAppearance.Material3.LargeComponent"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="10dp"
            tools:ignore="rtlSymmetry"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/profile_picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:text="@string/placeholder_username" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/parent_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/icon_full_name"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_baseline_badge_24"
                    app:tint="?attr/colorSecondary"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/full_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/icon_full_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                    android:text="@string/placeholder_full_name"
                    android:paddingStart="5dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/parent_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/icon_email"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_baseline_email_24"
                    app:tint="?attr/colorSecondary"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/icon_email"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                    android:text="@string/placeholder_email"
                    android:paddingStart="5dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/parent_website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/icon_website"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_baseline_link_24"
                    app:tint="?attr/colorSecondary"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/website"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/icon_website"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                    android:text="@string/placeholder_website"
                    android:paddingStart="5dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/parent_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/icon_location"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_baseline_place_24"
                    app:tint="?attr/colorSecondary"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/icon_location"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                    android:text="@string/placeholder_location"
                    android:paddingStart="5dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/parent_join_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/icon_join_date"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_baseline_access_time_filled_24"
                    app:tint="?attr/colorSecondary"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/join_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/icon_join_date"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                    android:text="@string/placeholder_join_date"
                    android:paddingStart="5dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>