<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/shape_corners_large"
    android:backgroundTint="?attr/colorSecondaryContainer"
    tools:ignore="PrivateResource">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_clickable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:clickable="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="10dp">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_baseline_class_24"
            app:tint="?attr/colorOnSurface"
            android:adjustViewBounds="true"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/icon"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/name"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/placeholder_repository_name" />

            <TextView
                android:id="@+id/description"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name"
                android:text="@string/placeholder_repository_description" />

            <ImageView
                android:id="@+id/icon_modification_date"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/ic_baseline_access_time_filled_24"
                android:adjustViewBounds="true"
                android:paddingEnd="3dp"
                tools:ignore="RtlSymmetry"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description"
                app:layout_constraintBottom_toBottomOf="@id/date_modified"
                app:tint="?colorSecondary"
                android:paddingTop="5dp"/>

            <TextView
                android:id="@+id/date_modified"
                android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/icon_modification_date"
                app:layout_constraintTop_toBottomOf="@id/description"
                app:layout_constraintEnd_toStartOf="@id/icon_stars"
                android:text="@string/placeholder_last_modified"
                android:paddingTop="5dp"/>

            <ImageView
                android:id="@+id/icon_stars"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/ic_baseline_star_24"
                android:adjustViewBounds="true"
                android:paddingHorizontal="2dp"
                app:layout_constraintTop_toBottomOf="@id/description"
                app:layout_constraintBottom_toBottomOf="@id/date_modified"
                app:layout_constraintEnd_toStartOf="@id/stars"
                app:tint="?colorSecondary"/>

            <TextView
                android:id="@+id/stars"
                android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/description"
                app:layout_constraintBottom_toBottomOf="@id/date_modified"
                app:layout_constraintEnd_toStartOf="@id/icon_forks"
                tools:ignore="HardcodedText"
                android:text="5" />

            <ImageView
                android:id="@+id/icon_forks"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/icons8_code_fork"
                android:adjustViewBounds="true"
                android:paddingStart="3dp"
                app:layout_constraintTop_toBottomOf="@id/description"
                app:layout_constraintBottom_toBottomOf="@id/date_modified"
                app:layout_constraintEnd_toStartOf="@id/forks"
                app:tint="?colorSecondary" />

            <TextView
                android:id="@+id/forks"
                android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description"
                app:layout_constraintBottom_toBottomOf="@id/date_modified"
                tools:ignore="HardcodedText"
                android:text="16"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>